re-enable test